# task-manager

./: LICENSE  Procfile  pyproject.toml
.github/workflows/: django.yml
task_manager/: settings.py
