[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["mkaraev <maruf.karaev97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
django-bootstrap4 = "^2.3.1"
rollbar = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
